--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   flutter_map: ^7.0.2
   flutter_map_cancellable_tile_provider: ^3.0.2
   flutter_svg: ^2.0.10+1
+  flutter_bloc: ^8.0.1
+  provider: ^6.0.2
+  file_picker: ^5.0.0
+  flutter_dropzone: ^4.0.2
 
 dev_dependencies:
   build_runner: ^2.4.0
