--- a/decibelio/pom.xml
+++ b/decibelio/pom.xml
@@ -66,7 +66,21 @@
             <artifactId>commons-csv</artifactId>
             <version>1.8</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.33.2</version> <!-- Puedes ajustar a la última versión estable -->
+        </dependency>
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client</artifactId>
+            <version>1.34.1</version> <!-- Puedes ajustar a la última versión estable -->
+        </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson2</artifactId>
+            <version>1.40.1</version> <!-- Puedes ajustar a la última versión estable -->
+        </dependency>
     </dependencies>
 
     <build>
