Modelamiento de User

--- a/decibelio_app_web/Dockerfile
+++ b/decibelio_app_web/Dockerfile
@@ -1,46 +1,51 @@
 # Usa una imagen base más ligera
 FROM debian:bullseye-slim
 
+# Configura el entorno no interactivo para evitar prompts durante la instalación
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Instalar dependencias necesarias, incluyendo git y xz-utils
+# Actualiza e instala las dependencias necesarias, incluyendo certificados
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-    curl wget unzip git xz-utils libstdc++6 libglu1-mesa fonts-droid-fallback python3 ca-certificates && \
+    curl wget unzip git xz-utils libstdc++6 libglu1-mesa fonts-droid-fallback \
+    python3 ca-certificates && \
+    update-ca-certificates && \
     rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
 
-# Variables de entorno de Flutter
-ENV PUB_HOSTED_URL=https://pub.flutter-io.cn
-ENV FLUTTER_STORAGE_BASE_URL=https://storage.flutter-io.cn
+# Configura las URLs de Flutter en caso de restricciones de red
+ENV PUB_HOSTED_URL=https://pub.dev
+ENV FLUTTER_STORAGE_BASE_URL=https://storage.googleapis.com
 
-# Descargar y extraer Flutter SDK
+# Descarga y extrae el SDK de Flutter
 RUN wget -q https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.7.0-stable.tar.xz && \
     tar -xf flutter_linux_3.7.0-stable.tar.xz -C /usr/local && \
     rm flutter_linux_3.7.0-stable.tar.xz
 
-# Configurar Flutter como directorio seguro para git
+# Configura Flutter como directorio seguro para git
 RUN git config --global --add safe.directory /usr/local/flutter
 
-# Ejecutar flutter doctor
+# Ejecuta `flutter doctor` para validar la instalación
 RUN /usr/local/flutter/bin/flutter doctor
 
-# Habilitar soporte para Flutter web
-RUN /usr/local/flutter/bin/flutter channel master && \
+# Habilita el soporte para Flutter Web
+RUN /usr/local/flutter/bin/flutter channel stable && \
     /usr/local/flutter/bin/flutter upgrade && \
     /usr/local/flutter/bin/flutter config --enable-web
 
-# Copiar archivos y construir la aplicación
+# Copia los archivos del proyecto y define el directorio de trabajo
 RUN mkdir /app/
 COPY . /app/
 WORKDIR /app/
 
-# Construir aplicación web
+# Ejecuta `flutter pub get` para descargar las dependencias del proyecto
+RUN /usr/local/flutter/bin/flutter pub get
+
+# Construye la aplicación web de Flutter
 RUN /usr/local/flutter/bin/flutter build web
 
-# Exponer el puerto
+# Expone el puerto para la aplicación web
 EXPOSE 9000
 
-# Hacer el script ejecutable y lanzar el servidor
+# Da permisos de ejecución al script del servidor y lo define como punto de entrada
 RUN ["chmod", "+x", "/app/server/server.sh"]
-
 ENTRYPOINT ["/app/server/server.sh"]
