--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   assets:
      - assets/icons/
      - assets/images/
+     - assets/icons/map-marker-svgrepo-com.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
