--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   flutter_dropzone: ^4.0.2
   badges: ^3.1.2
   equatable: ^2.0.5
+  adaptive_theme: ^3.6.0
+  google_fonts: ^6.2.1
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   build_runner: ^2.4.0
@@ -63,7 +66,7 @@ flutter:
   assets:
      - assets/icons/
      - assets/images/
-     - assets/icons/map-marker-svgrepo-com.svg
+     - assets/logos/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
