--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   adaptive_theme: ^3.6.0
   google_fonts: ^6.2.1
   fl_chart: ^0.69.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   build_runner: ^2.4.0
