--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,10 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
+      # Checkout del repositorio
       - uses: actions/checkout@v4
 
+      # Configurar JDK 17
       - name: Configurar JDK 17
         uses: actions/setup-java@v4
         with:
@@ -22,36 +24,49 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      # Construir con Maven desde la carpeta 'decibelio'
       - name: Construir con Maven
-        run: mvn clean package -B -Dmaven.test.skip
+        run: |
+          cd decibelio
+          ./mvnw liberty:dev
 
+      # Copiar binarios
       - name: Copiar binarios
         run: |
-          mkdir candidate-binary
+          cd decibelio
+          mkdir -p candidate-binary
           cp target/*.jar candidate-binary/
 
+      # Ejecutar pruebas con Maven
       - name: Ejecutar pruebas con Maven
-        run: mvn test
+        run: |
+          cd decibelio
+          ./mvnw test
 
+      # Copiar resultados de pruebas
       - name: Copiar resultados de pruebas
         run: |
-          mkdir test-results
+          cd decibelio
+          mkdir -p test-results
           cp target/*-reports/TEST-*.xml test-results/
 
+      # Subir binarios de la aplicación
       - name: Subir binarios de la aplicación
         uses: actions/upload-artifact@v3
         with:
           name: Application-Binary
-          path: candidate-binary
+          path: decibelio/candidate-binary
 
+      # Subir resultados de pruebas
       - name: Subir resultados de pruebas
         uses: actions/upload-artifact@v3
         with:
           name: Test-Results
-          path: test-results
+          path: decibelio/test-results
 
+      # Publicar resultados de pruebas
       - name: Publicar Resultados de Pruebas
         uses: EnricoMi/publish-unit-test-result-action@v2.0.0
         if: always()
         with:
-          junit_files: "test-results/**/*.xml"
+          junit_files: "decibelio/test-results/**/*.xml"
