fix: Change of routes in the build en el workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Construir con Maven
         run: |
           cd decibelio
-          ./mvnw liberty:dev
+          chmod +x mvnw
+          ./mvnw clean package
 
       # Copiar binarios
       - name: Copiar binarios
