--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,19 +24,23 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      # Construir con Maven desde la carpeta 'decibelio'
       - name: Construir con Maven
         run: |
-          cd decibelio
-          chmod +x mvnw
-          ./mvnw clean package
-
-      # Copiar binarios
+            cd decibelio
+            chmod +x mvnw
+            ./mvnw clean package
+        
+      - name: Verificar contenido del directorio target
+        run: |
+            cd decibelio
+            ls -la target
+        
       - name: Copiar binarios
         run: |
-          cd decibelio
-          mkdir -p candidate-binary
-          cp target/*.jar candidate-binary/
+            cd decibelio
+            mkdir -p candidate-binary
+            cp target/*.jar candidate-binary/
+        
 
       # Ejecutar pruebas con Maven
       - name: Ejecutar pruebas con Maven
