--- a/decibelio/pom.xml
+++ b/decibelio/pom.xml
@@ -132,12 +132,12 @@
                 </configuration>
 
             </plugin>
-                <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <version>3.0.0-M5</version>
                 <configuration>
-                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                    <reportsDirectory>target/test-classes</reportsDirectory>
                 </configuration>
             </plugin>
         </plugins>
