--- a/.github/workflows/license-compliance.yml
+++ b/.github/workflows/license-compliance.yml
@@ -1,59 +1,61 @@
 name: 05 License Compliance
 
 on:
-    workflow_dispatch:
-    workflow_call:
+  workflow_dispatch:
+  workflow_call:
 
 jobs:
-    license-finder:
-        runs-on: ubuntu-latest
-        strategy:
-          fail-fast: false
-          matrix:
-            language: [java, flutter]
+  license-finder:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [java, flutter]
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v3
+    steps:
+      # Checkout del repositorio
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-            # Java License Compliance
-            - name: Run License Finder for Java
-              if: ${{ matrix.language == 'java' }}
-              uses: jmservera/license-finder-action@main
-              with:
-                permitted-licenses: |
-                  MIT, Apache-2.0
-                approved-dependencies:  | 
-                  junit,junit-jupiter
-              env:
-                JAVA_HOME: /opt/hostedtoolcache/Java_17/...
+      # Configuración para Java
+      - name: Run License Finder for Java
+        if: ${{ matrix.language == 'java' }}
+        uses: jmservera/license-finder-action@main
+        with:
+          permitted-licenses: |
+            MIT, Apache-2.0
+          approved-dependencies: |
+            junit, junit-jupiter
+        env:
+          JAVA_HOME: /opt/hostedtoolcache/Java_17_x64
 
-            # Flutter License Compliance
-            - name: Setup Flutter
-              if: ${{ matrix.language == 'flutter' }}
-              uses: subosito/flutter-action@v2
-              with:
-                flutter-version: stable
+      # Configuración para Flutter
+      - name: Setup Flutter
+        if: ${{ matrix.language == 'flutter' }}
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.24.3' # Especifica la versión exacta que estás usando
+          channel: 'stable'
 
-            - name: Install Flutter Dependencies
-              if: ${{ matrix.language == 'flutter' }}
-              run: flutter pub get
+      - name: Install Flutter Dependencies
+        if: ${{ matrix.language == 'flutter' }}
+        run: flutter pub get
 
-            - name: Run Flutter License Check
-              if: ${{ matrix.language == 'flutter' }}
-              run: flutter pub run license_checker
-              
-            # Publish Results
-            - name: Publish License Check Results
-              if: always()
-              uses: EnricoMi/publish-unit-test-result-action@v2.2.0
-              with:
-                junit_files: "license_finder_report.xml"
-                check_name: "License Compliance Check"
+      - name: Run Flutter License Check
+        if: ${{ matrix.language == 'flutter' }}
+        run: flutter pub run license_checker
 
-            - name: 'Upload Dependency Review Report'
-              if: always()
-              uses: actions/upload-artifact@v3
-              with:
-                name: license-finder-report
-                path: ${{ github.workspace }}/license_finder_report.xml
+      # Publicar resultados
+      - name: Publish License Check Results
+        if: always()
+        uses: EnricoMi/publish-unit-test-result-action@v2.2.0
+        with:
+          junit_files: "license_finder_report.xml"
+          check_name: "License Compliance Check"
+
+      - name: Upload Dependency Review Report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: license-finder-report
+          path: ${{ github.workspace }}/license_finder_report.xml
