--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,51 +24,24 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Construir con Maven
+      # Construir y ejecutar pruebas con Maven
+      - name: Construir y ejecutar pruebas con Maven
         run: |
           cd decibelio
           chmod +x mvnw
-          ./mvnw clean package
+          ./mvnw clean package test
+        env:
+          MAVEN_OPTS: "-Xmx1024m"
 
-      - name: Verificar contenido del directorio target
+      # Copiar resultados de pruebas de Maven
+      - name: Copiar resultados de pruebas de Maven
         run: |
           cd decibelio
-          ls -la target
+          mkdir -p test-results
+          find target -name 'TEST-*.xml' -exec cp {} test-results/ \;
 
-      - name: Copiar binarios
-        run: |
-          cd decibelio
-          mkdir -p candidate-binary
-          cp target/*.war candidate-binary/
-
-      # Ejecutar pruebas con Maven
-      - name: Ejecutar pruebas con Maven
-        run: |
-          cd decibelio
-          ./mvnw test
-
-      - name: Copiar resultados de pruebas
-        run: |
-            cd decibelio
-            mkdir -p test-results
-            find target -name 'TEST-*.xml' -exec cp {} test-results/ \;
-  
-      # Subir binarios de la aplicación
-      - name: Subir binarios de la aplicación
-        uses: actions/upload-artifact@v3
-        with:
-          name: Application-Binary
-          path: decibelio/candidate-binary
-
-      # Subir resultados de pruebas
-      - name: Subir resultados de pruebas
-        uses: actions/upload-artifact@v3
-        with:
-          name: Test-Results
-          path: decibelio/test-results
-
-      # Publicar resultados de pruebas
-      - name: Publicar Resultados de Pruebas
+      # Publicar resultados de pruebas de Maven
+      - name: Publicar Resultados de Pruebas de Maven
         uses: EnricoMi/publish-unit-test-result-action@v2.0.0
         if: always()
         with:
@@ -79,6 +52,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.3'
+          channel: 'stable'
 
       # Instalar dependencias de Flutter
       - name: Instalar dependencias de Flutter
@@ -92,29 +66,37 @@ jobs:
           cd decibelio_app_web
           flutter build web
 
-      # # Ejecutar pruebas de Flutter
-      # # - name: Ejecutar pruebas con Flutter
-      # #   run: |
-      # #     cd decibelio_app_web
-      #     flutter test
+      # Copiar resultados de pruebas de Flutter
+      - name: Copiar resultados de pruebas de Flutter
+        run: |
+          cd decibelio_app_web
+          mkdir -p test-results
+          find build -name 'test-*.xml' -exec cp {} test-results/ \;
 
-      # # Copiar resultados de las pruebas de Flutter
-      # - name: Copiar resultados de pruebas de Flutter
-      #   run: |
-      #     cd decibelio_app_web
-      #     mkdir -p test-results
-      #     find test -name 'test_*.dart' -exec cp {} decibelio_app_web/test-results/ \;
+      # Publicar resultados de pruebas de Flutter
+      - name: Publicar Resultados de Pruebas de Flutter
+        uses: EnricoMi/publish-unit-test-result-action@v2.0.0
+        if: always()
+        with:
+          junit_files: "decibelio_app_web/test-results/**/*.xml"
 
-      # # Subir resultados de pruebas de Flutter
-      # - name: Subir resultados de pruebas de Flutter
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: Flutter-Test-Results
-      #     path: decibelio_app_web/test-results
+      # Subir binarios de la aplicación
+      - name: Subir binarios de la aplicación
+        uses: actions/upload-artifact@v3
+        with:
+          name: Application-Binary
+          path: decibelio/target/*.war
 
-      # # Publicar resultados de pruebas de Flutter
-      # - name: Publicar Resultados de Pruebas de Flutter
-      #   uses: EnricoMi/publish-unit-test-result-action@v2.0.0
-      #   if: always()
-      #   with:
-      #     junit_files: "decibelio_app_web/test-results/**/*.xml"
+      # Subir resultados de pruebas de Maven
+      - name: Subir resultados de pruebas de Maven
+        uses: actions/upload-artifact@v3
+        with:
+          name: Maven-Test-Results
+          path: decibelio/test-results
+
+      # Subir resultados de pruebas de Flutter
+      - name: Subir resultados de pruebas de Flutter
+        uses: actions/upload-artifact@v3
+        with:
+          name: Flutter-Test-Results
+          path: decibelio_app_web/test-results
