--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,9 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      # 1. Clonar el repositorio
       - name: Checkout del repositorio
         uses: actions/checkout@v4
 
-      # 2. Configurar JDK 17
       - name: Configurar JDK 17
         uses: actions/setup-java@v4
         with:
@@ -25,7 +23,6 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      # 3. Construir y probar la aplicación Java con Maven
       - name: Construir y probar aplicación Java
         run: |
           cd decibelio
@@ -36,21 +33,23 @@ jobs:
         env:
           MAVEN_OPTS: "-Xmx1024m"
 
-      # 4. Publicar resultados de pruebas de Maven
+      - name: Verificar resultados de pruebas Maven
+        run: |
+          cd decibelio/test-results
+          ls -l || echo "No se encontraron resultados de pruebas Maven."
+
       - name: Publicar resultados de pruebas Maven
-        uses: EnricoMi/publish-unit-test-result-action@v2.0.0
+        uses: EnricoMi/publish-unit-test-result-action@v2.4.0
         if: always()
         with:
           junit_files: "decibelio/test-results/**/*.xml"
 
-      # 5. Configurar Flutter
       - name: Configurar Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.3'
           channel: 'stable'
 
-      # 6. Instalar dependencias y construir Flutter
       - name: Instalar y construir aplicación Flutter (Web)
         run: |
           cd decibelio_app_web
@@ -59,14 +58,17 @@ jobs:
           mkdir -p test-results
           find build -name 'test-*.xml' -exec cp {} test-results/ \;
 
-      # 7. Publicar resultados de pruebas de Flutter
+      - name: Verificar resultados de pruebas Flutter
+        run: |
+          cd decibelio_app_web/test-results
+          ls -l || echo "No se encontraron resultados de pruebas Flutter."
+
       - name: Publicar resultados de pruebas Flutter
-        uses: EnricoMi/publish-unit-test-result-action@v2.0.0
+        uses: EnricoMi/publish-unit-test-result-action@v2.4.0
         if: always()
         with:
           junit_files: "decibelio_app_web/test-results/**/*.xml"
 
-      # 8. Subir artefactos (binarios y resultados de pruebas)
       - name: Subir artefactos
         uses: actions/upload-artifact@v3
         with:
