--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,10 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout del repositorio
-        uses: actions/checkout@v4
+      # Checkout del repositorio
+      - uses: actions/checkout@v4
 
+      # Configurar JDK 17
       - name: Configurar JDK 17
         uses: actions/setup-java@v4
         with:
@@ -23,57 +24,79 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Construir y probar aplicación Java
+      # Construir y ejecutar pruebas con Maven
+      - name: Construir y ejecutar pruebas con Maven
         run: |
           cd decibelio
           chmod +x mvnw
           ./mvnw clean package test
-          mkdir -p test-results
-          find target -name 'TEST-*.xml' -exec cp {} test-results/ \;
         env:
           MAVEN_OPTS: "-Xmx1024m"
 
-      - name: Verificar resultados de pruebas Maven
+      # Copiar resultados de pruebas de Maven
+      - name: Copiar resultados de pruebas de Maven
         run: |
-          cd decibelio/test-results
-          ls -l || echo "No se encontraron resultados de pruebas Maven."
+          cd decibelio
+          mkdir -p test-results
+          find target -name 'TEST-*.xml' -exec cp {} test-results/ \;
 
-      - name: Publicar resultados de pruebas Maven
-        uses: EnricoMi/publish-unit-test-result-action@v2.4.0
+      # Publicar resultados de pruebas de Maven
+      - name: Publicar Resultados de Pruebas de Maven
+        uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
           junit_files: "decibelio/test-results/**/*.xml"
 
+      # Configurar Flutter
       - name: Configurar Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.3'
           channel: 'stable'
 
-      - name: Instalar y construir aplicación Flutter (Web)
+      # Instalar dependencias de Flutter
+      - name: Instalar dependencias de Flutter
         run: |
           cd decibelio_app_web
           flutter pub get
+
+      # Construir aplicación Flutter para la web
+      - name: Construir aplicación Flutter (Web)
+        run: |
+          cd decibelio_app_web
           flutter build web
+
+      # Copiar resultados de pruebas de Flutter
+      - name: Copiar resultados de pruebas de Flutter
+        run: |
+          cd decibelio_app_web
           mkdir -p test-results
           find build -name 'test-*.xml' -exec cp {} test-results/ \;
 
-      - name: Verificar resultados de pruebas Flutter
-        run: |
-          cd decibelio_app_web/test-results
-          ls -l || echo "No se encontraron resultados de pruebas Flutter."
-
-      - name: Publicar resultados de pruebas Flutter
-        uses: EnricoMi/publish-unit-test-result-action@v2.4.0
+      # Publicar resultados de pruebas de Flutter
+      - name: Publicar Resultados de Pruebas de Flutter
+        uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
           junit_files: "decibelio_app_web/test-results/**/*.xml"
 
-      - name: Subir artefactos
+      # Subir binarios de la aplicación
+      - name: Subir binarios de la aplicación
         uses: actions/upload-artifact@v3
         with:
-          name: Application-Artifacts
-          path: |
-            decibelio/target/*.war
-            decibelio/test-results
-            decibelio_app_web/test-results
+          name: Application-Binary
+          path: decibelio/target/*.war
+
+      # Subir resultados de pruebas de Maven
+      - name: Subir resultados de pruebas de Maven
+        uses: actions/upload-artifact@v3
+        with:
+          name: Maven-Test-Results
+          path: decibelio/test-results
+
+      # Subir resultados de pruebas de Flutter
+      - name: Subir resultados de pruebas de Flutter
+        uses: actions/upload-artifact@v3
+        with:
+          name: Flutter-Test-Results
+          path: decibelio_app_web/test-results
