--- a/decibelio/pom.xml
+++ b/decibelio/pom.xml
@@ -137,7 +137,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-                    <reportsDirectory>target/test-classes</reportsDirectory>
+                    <reportFormat>brief</reportFormat>
+                    <useFile>false</useFile>
                 </configuration>
             </plugin>
         </plugins>
