--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -27,10 +27,10 @@ jobs:
         with:
           languages: ${{ matrix.language }}
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
           cache: maven
 
@@ -65,8 +65,9 @@ jobs:
       - name: Docker Cleanup and Run
         run: |
           docker rm demoApp || true
-          docker run -d -p 8080:8080 --name demoApp myapp-image
-        # Asegúrate de reemplazar 'myapp-image' con el nombre correcto de la imagen
+          docker build -t decibelio-image .  # Build the Docker image first
+          docker run -d -p 8080:8080 --name demoApp decibelio-image
+        # Ensure 'decibelio-image' is the correct image name for your app
 
   spotbugs:
     name: SAST SpotBugs
