--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -35,7 +35,9 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn clean package -B -Dmaven.test.skip
+        run: |
+          cd decibelio 
+          mvn clean package -B -Dmaven.test.skip
 
       - name: Cache build
         id: cache-build
