--- a/decibelio/Dockerfile
+++ b/decibelio/Dockerfile
@@ -1,17 +1,22 @@
 FROM open-liberty:kernel-slim-java17-openj9
 
+# Cambiar a usuario root para ejecutar comandos que requieren permisos elevados
+USER root
 RUN apt-get update && apt-get install -y maven && rm -rf /var/lib/apt/lists/*
 
+# Cambiar de nuevo al usuario no raíz predeterminado si es necesario
+USER 1001
+
+# Copiar la aplicación al contenedor
 COPY --chown=1001:0 /src/main /usr/src/app
-COPY --chown=1001:0 /src/main/liberty/config /config
-
 WORKDIR /usr/src/app
-RUN mvn clean package -DskipTests
 
-RUN curl -o /config/postgresql-42.4.2.jar \
-    https://repo1.maven.org/maven2/org/postgresql/postgresql/42.4.2/postgresql-42.4.2.jar
+# Construir la aplicación con Maven
+RUN mvn package
+
+# Configurar y desplegar la aplicación
+COPY --chown=1001:0 /src/main/liberty/config /config
+RUN features.sh
 
 COPY --chown=1001:0 target/*.war /config/apps
-
-RUN features.sh
 RUN configure.sh
