--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.0
   build_web_compilers: ^4.0.4
+  license_checker: ^1.2.0
   flutter_test:
     sdk: flutter
 
