--- a/decibelio_app_web/pubspec.yaml
+++ b/decibelio_app_web/pubspec.yaml
@@ -45,6 +45,10 @@ dev_dependencies:
   license_checker: ^1.2.0
   flutter_test:
     sdk: flutter
+  flutter_lints: ^4.0.0
+
+dependency_overrides:
+  tar: ^0.6.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
