--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -3,6 +3,7 @@ name: 04 SAST
 on:
   workflow_dispatch:
   workflow_call:
+
 jobs:
   SAST-CodeQL:
     name: Build and SAST CodeQL
@@ -95,3 +96,24 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2.1.28
         with:
           sarif_file: ${{github.workspace}}/results.sarif
+
+  sonarqube:
+    name: Analyze with SonarQube
+    needs: [SAST-CodeQL]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Analyze with SonarQube
+        uses: SonarSource/sonarqube-scan-action@v2.0.1
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
