--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           distribution: temurin
-          java-version: 17  # Use Java 17 instead of Java 11
+          java-version: 17 
           cache: maven
 
       - name: Install SCA tool (CRDA)
